<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menuReaderAspectRatio"
          android:title="@string/menu_browser_filter"
          android:icon="@drawable/ic_filter_list_white_24dp"
          app:showAsAction="always">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/menu_browser_filter_all"
                      android:title="@string/menu_browser_filter_all"
                      android:checked="true"/>
                <item android:id="@+id/menu_browser_filter_unread"
                      android:title="@string/menu_browser_filter_unread"/>
                <item android:id="@+id/menu_browser_filter_reading"
                      android:title="@string/menu_browser_filter_reading"/>
                <item android:id="@+id/menu_browser_filter_unfinished"
                    android:title="@string/menu_browser_filter_unfinished"/>
                <item android:id="@+id/menu_browser_filter_read"
                      android:title="@string/menu_browser_filter_read"/>
            </group>
        </menu>
    </item>
</menu>